# omni-ml

./: .dockerignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  dockerfile  pyproject.toml
config/: dataset.yaml  extraction.yaml
docker/: .env.dev.example  docker-compose.yml  dockerfile.api  dockerfile.mlflow  readme.md
docker/nginx/: nginx.conf
docs/dataset/: dataset_domain.md
notebooks/: 2025-11-01-amp-prices.ipynb  2025-11-01-amp.ipynb
notebooks/dataset/: 2025-11-01-amp-indicators.ipynb  2025-11-01-amp.ipynb
src/: app.py  config.py
src/agents/application/: orchestrator.py
src/agents/domain/: entities.py  interfaces.py
src/dataset/: main.py
src/dataset/app/: pipelines.py
src/dataset/application/: __init__.py  asset_builder.py
src/dataset/application/dtos/: __init__.py  get_prices_query.py
src/dataset/application/use_cases/: __init__.py  build_asset_with_prices.py  get_prices.py
src/dataset/domain/: __init__.py  entities.py  enums.py  interfaces.py  value_objects.py
src/dataset/domain/entities/: __init__.py  economic_unit.py
src/dataset/domain/enums/: __init__.py  candle_interval.py  economic_unit_type.py  instrument_type.py
src/dataset/domain/interfaces/: __init__.py  economic_unit_classifier.py  economic_unit_indicator_repository.py  economic_unit_listing_repository.py  economic_unit_repository.py  listing_price_repository.py
src/dataset/infra/: backend_adapters.py  yfinance_pandas_dataset.py
src/dataset/infrastructure/: price_router.py  yfinance_price.py
src/extraction/: main.py
src/extraction/application/: interfaces.py  usecases.py
src/extraction/domain/: entities.py  enums.py  errors.py  events.py  interfaces.py  models.py  value_objects.py
src/extraction/infrastructure/: interfaces.py  repositories.py  routing.py  storages.py
tests/: test_dataset.py  test_indicator.py  test_price.py  test_training.py  test_true.py
tests/dataset/domain/: test_asset.py  test_country.py
tests/dataset/infra/: test_indicator.py  test_price.py
tests/test_dataset/: test_asset_repository.py  test_candle_repository.py  test_fixture.py
(+15 files in other folders)
